fixed formatting, added spacebar option

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                             <div class="problem-text" id="easy-problem-text">Solve: ?</div>
                             <div class="problem-reward">Reward: $<span id="easy-reward">5</span></div>
                             <div class="problem-input">
-                                <input type="number" id="easy-answer-input" placeholder="Answer">
+                                <input type="number" id="easy-answer-input">
                                 <button class="submit-answer" data-difficulty="easy">Submit</button>
                             </div>
                         </div>
@@ -39,7 +39,7 @@
                             <div class="problem-text" id="medium-problem-text">Solve: ?</div>
                             <div class="problem-reward">Reward: $<span id="medium-reward">15</span></div>
                             <div class="problem-input">
-                                <input type="number" id="medium-answer-input" placeholder="Answer">
+                                <input type="number" id="medium-answer-input">
                                 <button class="submit-answer" data-difficulty="medium">Submit</button>
                             </div>
                         </div>
@@ -49,7 +49,7 @@
                             <div class="problem-text" id="hard-problem-text">Solve: ?</div>
                             <div class="problem-reward">Reward: $<span id="hard-reward">30</span></div>
                             <div class="problem-input">
-                                <input type="number" id="hard-answer-input" placeholder="Answer">
+                                <input type="number" id="hard-answer-input">
                                 <button class="submit-answer" data-difficulty="hard">Submit</button>
                             </div>
                         </div>
